@@ -115,13 +115,15 @@
       <option name="wxSP_BORDER"              help="Draws a standard border." />
       <option name="wxSP_NOBORDER"            help="No border (default)." />
       <option name="wxSP_NO_XP_THEME"         help="Under Windows XP, switches off the attempt to draw the splitter using Windows XP theming, so the borders and sash will take on the pre-XP look." />
-      <option name="wxSP_PERMIT_UNSPLIT"      help="Always allow to unsplit, even with the minimum pane size other than zero." />
+      <option name="wxSP_PERMIT_UNSPLIT"      help="Always allow to unsplit, even with the minimum pane size other than zero. Note: The designer prevents un-splitting." />
       <option name="wxSP_LIVE_UPDATE"         help="Don't draw XOR line but resize the child windows immediately." />wxSP_3D</property>
     <property name="splitmode" type="option">
       <option name="wxSPLIT_VERTICAL"         help="Specifies a vertical split window." />
       <option name="wxSPLIT_HORIZONTAL"       help="Specifies a horizontal split window." />wxSPLIT_VERTICAL</property>
     <property name="sashpos" type="int"      help="The initial sash position.">0</property>
-	<property name="sashgravity" type="float" help= "Sets the sash gravity. Remarks: Gravity is real factor which controls position of sash while resizing wxSplitterWindow. Gravity tells wxSplitterWindow how much will left/top window grow while resizing.">0.0</property>
+    <property name="sashsize" type="int"      help="Overrides platform metrics if greater than -1">-1</property>
+    <property name="sashgravity" type="float" help= "Sets the sash gravity. Remarks: Gravity is real factor which controls position of sash while resizing wxSplitterWindow. Gravity tells wxSplitterWindow how much will left/top window grow while resizing.">0.0</property>
+    <property name="min_pane_size" type="uint" help="Minimum size for the panes. A minimum less than 1 is not allowed in the designer, because the designer prevents un-splitting.">0</property>  
   </objectinfo>
 
   <objectinfo class="splitteritem" type="splitteritem" />
